# ClustalParser

./: .travis.yml  ChangeLog.md  ClustalParser.cabal  ClustalParserTest.hs  README.md  changelog  stack.yaml  struct-multiline.mlocarna
Biobase/: Clustal.hs
Biobase/Clustal/: Import.hs  Types.hs
src/Bio/: ClustalData.hs  ClustalParser.hs  Clustalw2Data.hs  Clustalw2Parser.hs
test-suite/: ClustalParserSpec.hs
